manifests/jwt_auth/jwt-auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-auth-server
spec:
  selector:
    matchLabels:
      app: jwt-auth-server
  replicas: 2
  template:
    metadata:
      labels:
        app: jwt-auth-server
    spec:
      containers:
        - name: node
          image: jwt-auth-server:dev-v2
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/node", "/app/index.js"]
          volumeMounts:
            - name: code
              mountPath: /app
          
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi

          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
      
      volumes:
        - name: code
          configMap:
            name: jwt-auth-server-js
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-auth-service
spec:
  selector:
    app: jwt-auth-server
  ports:
    - port: 80
      targetPort: 8080
