manifests/jwt_auth/jwt-auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jwt-auth-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/jwt
      backendRefs:
        - name: jwt-auth-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /jwt-ui
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: jwt-ui-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /jwt-pg-ui-debug
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: jwt-pg-ui-debug-service
          port: 80
